--- a/RStudio and Tidyverse Notebook (Live).Rmd
+++ b/RStudio and Tidyverse Notebook (Live).Rmd
@@ -1,5 +1,5 @@
 ---
-title: "RStudio and Tidyverse Workshop Demo (Complete)"
+title: "RStudio and Tidyverse Workshop Demo (Live)"
 output:
   html_document: default
   pdf_document: default
